--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     "ExtraccionLimpiezaCarga/Importaciones"
   ],
   "java.project.referencedLibraries": [
-    "c:\\Users\\Angel\\Downloads\\sqljdbc_12.6\\enu\\jars\\mssql-jdbc-12.6.1.jre11.jar"
+    "c:\\Users\\Angel\\Downloads\\sqljdbc_12.6\\enu\\jars\\mssql-jdbc-12.6.1.jre11.jar",
+    "c:\\Users\\Angel\\Desktop\\Angelito\\Descargas\\sqljdbc_12.6\\enu\\jars\\mssql-jdbc-12.6.1.jre11.jar"
   ]
 }
